# arbbot

./: .envrc.example  README.md  config.yaml  dump_trades.py  export.sh  pyproject.toml  requirements.txt
.github/workflows/: build.yml
arbbot/: __main__.py  app.py  coinspot.py  config.py  exchange.py  first_strategy.py  noexcept.py  pyinstaller.py
